[tool.poetry]
name = "2023-htmx-osxp"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
tinydb = "^4.8.0"
dataset = "^1.6.2"
devtools = "^0.12.2"
flask-htmx-fork = "^0.2"
lxml = "^4.9.3"
jinja-partials = "^0.1.1"
abilian-devtools = "^0.5.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
